[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hyqp"
version = "1.0.0"
description = "Python SDK for the HYQP publish/subscribe IoT protocol"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Badr El Khalyly", email = "badrelkhalylyphd@gmail.com"},
]
keywords = ["iot", "pubsub", "mqtt", "hyqp", "raspberry-pi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: Log Analysis",
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
# Zero dependencies — stdlib only
dependencies = []

[project.urls]
Homepage = "https://github.com/badrelkhalyly/hyqp"

[tool.setuptools.packages.find]
include = ["hyqp*"]
